Add bucket name & correct ACL for prework

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-BUCKET=
-BUCKET_ACL=authenticated-read
+BUCKET=prework.codeup.com
+BUCKET_ACL=public-read
